; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/atlx/extr_atl2.c_atl2_check_eeprom_exist.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/atlx/extr_atl2.c_atl2_check_eeprom_exist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atl2_hw = type { i32 }

@REG_SPI_FLASH_CTRL = common dso_local global i32 0, align 4
@SPI_FLASH_CTRL_EN_VPD = common dso_local global i32 0, align 4
@REG_PCIE_CAP_LIST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.atl2_hw*)* @atl2_check_eeprom_exist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @atl2_check_eeprom_exist(%struct.atl2_hw* %0) #0 {
  %2 = alloca %struct.atl2_hw*, align 8
  %3 = alloca i32, align 4
  store %struct.atl2_hw* %0, %struct.atl2_hw** %2, align 8
  %4 = load %struct.atl2_hw*, %struct.atl2_hw** %2, align 8
  %5 = load i32, i32* @REG_SPI_FLASH_CTRL, align 4
  %6 = call i32 @ATL2_READ_REG(%struct.atl2_hw* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @SPI_FLASH_CTRL_EN_VPD, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %20

11:                                               ; preds = %1
  %12 = load i32, i32* @SPI_FLASH_CTRL_EN_VPD, align 4
  %13 = xor i32 %12, -1
  %14 = load i32, i32* %3, align 4
  %15 = and i32 %14, %13
  store i32 %15, i32* %3, align 4
  %16 = load %struct.atl2_hw*, %struct.atl2_hw** %2, align 8
  %17 = load i32, i32* @REG_SPI_FLASH_CTRL, align 4
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @ATL2_WRITE_REG(%struct.atl2_hw* %16, i32 %17, i32 %18)
  br label %20

20:                                               ; preds = %11, %1
  %21 = load %struct.atl2_hw*, %struct.atl2_hw** %2, align 8
  %22 = load i32, i32* @REG_PCIE_CAP_LIST, align 4
  %23 = call i32 @ATL2_READ_REGW(%struct.atl2_hw* %21, i32 %22)
  store i32 %23, i32* %3, align 4
  %24 = load i32, i32* %3, align 4
  %25 = and i32 %24, 65280
  %26 = icmp eq i32 %25, 27648
  %27 = zext i1 %26 to i64
  %28 = select i1 %26, i32 0, i32 1
  ret i32 %28
}

declare dso_local i32 @ATL2_READ_REG(%struct.atl2_hw*, i32) #1

declare dso_local i32 @ATL2_WRITE_REG(%struct.atl2_hw*, i32, i32) #1

declare dso_local i32 @ATL2_READ_REGW(%struct.atl2_hw*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
